--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <title>Airbnb Clone</title>
+    <link rel="icon" type="image/x-icon" href="../src/images/logo.png" />
+
     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.5.0/css/all.css"
@@ -11,7 +14,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>React Template</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
