--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -2,7 +2,11 @@
 <html lang="en">
   <head>
     <title>Airbnb Clone</title>
-    <link rel="icon" type="image/x-icon" href="../src/images/logo.png" />
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="https://airbnb-project.s3.us-west-2.amazonaws.com/favicon.png"
+    />
 
     <link
       rel="stylesheet"
